--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
+# rss feed
+
+name: zachphillips
+description: Zach Phillips's Blog
+url: http://zach.be
+
 # This is the default format. 
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /:categories/:year/:month/:title
