--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,9 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 auto: true
 pygments: true
 paginate: 5
+markdown: rdiscount
+rdiscount:
+  extensions: [smart]
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
