Changed servers, left github for the holy grail

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # rss feed
 
 name: zachphillips
-description: Zach Phillips's Blog
+description: Zach Phillips
 url: http://zach.be
 
 # This is the default format. 
@@ -21,13 +21,6 @@ rdiscount:
 #
 title : zachphillips
 tagline: Site Tagline
-author :
-  name : Zach Phillips
-  email : z@zach.be
-  github : zachphillips
-  twitter : @zachphillips
-  feedburner : zachphillips
-
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
